--- a/views/home.html
+++ b/views/home.html
@@ -5,10 +5,14 @@
 </div>
 <div class="row-fluid">
     The Seasons Lodge Guest House is one of the finest three stars hotels on the east coast of Bulgaria.
-    Situated on the edge of Albena this superb hotel is located in the old fishing village of Golden Fish, and is only a stone throw away from the beach.
-    Being a privately owned and family run hotel allows us to make sure our residents and guests are treated the way we would like to be treated ourselves. 
-    We want you to sit back and relax. Indulge yourself with our facilities, and enjoy the warmth and hospitality offered to you at our hotel.
-    We will try our very best to make sure your stay is an enjoyable one and we look forward to welcoming you back.
+    The hotel is located on the edge of Albena in an old fishing village of Golden Fish. Golden Fish village is quiet residential area within a short 
+    distance of the Albena centre and is only a stone throw away from the beach. It offers 4 comfortable air-conditioned flats with sea views.
+    
+    Being a privately owned and family run hotel allows us to make sure our residents and guests will always be treated as individuals and with respect,
+    as we would like to be treated ourselves. We have a very good working relationship with many local businesses and private individuals alike so
+    we can always assist wherever possible. The friendly family atmosphere that our customers experience is always warmly welcomed as is the good advice that is given with a smile.
+
+    We try our very best to make sure our customers stay is as comfortable and convienient as possible.
 </div>
 <div class="row-fluid">
     <section class="span4">
@@ -18,9 +22,9 @@
             </div>
             <h3 class="pagination-centered">Booking</h3>
         </a>
-        <p>and embark on your most memorable Albena Vacation ever.
-            Seasons Lodge Guest House is a 3 star rated Bed and Breakfast family run hotel for people who want a restful and relaxing beachfront vacation at a very affordable price.We enjoy what we are doing. 
-            We value our customers and we try to ensure that they will return.
+        <p>
+    Take advantage our online reservation service to check flats avaiability and book in advance.
+    We know reservation can be a hassle, so let us help you with it.
             <a class="js-nav" href="/{{lang}}/booking">... read more</a>
         </p>
     </section>
