--- a/views/home.html
+++ b/views/home.html
@@ -22,9 +22,8 @@
             </div>
             <h3 class="pagination-centered">Booking</h3>
         </a>
-        <p>
-    Take advantage our online reservation service to check flats avaiability and book in advance.
-    We know reservation can be a hassle, so let us help you with it.
+        <p>We know reservation can be a hassle, so let us help you with it. Take advantage our online reservation service to check flats avaiability and book in advance.
+         Our reservation team will check if there are flats available on your chosen dates and get back to you within two business days.
             <a class="js-nav" href="/{{lang}}/booking">... read more</a>
         </p>
     </section>
