--- a/views/home.html
+++ b/views/home.html
@@ -34,8 +34,8 @@
             </div>
             <h3 class="pagination-centered">Gallery</h3>
         </a>
-        <p>Our 4 Appartments, decorated in a truly elegant Bulgarian style, offer a wonderful view of the Black sea. Due to the unique nature of House Season guest house each apartment has a personality of its own and no two apartments are alike. 
-            Each individually designed apartment has been created with an emphasis on supreme comfort and relaxation
+        <p>All 4 flats are decorated in a truly elegant Bulgarian style and offer a wonderful views of the Black sea. Due to the unique nature of House Season guest house, each flat has a personality of its own and no two are alike. 
+            Each individually designed flat has been created with an emphasis on supreme comfort and relaxation.
             <a class="js-nav" href="/{{lang}}/gallery">... read more</a>
         </p>
     </section>
@@ -82,9 +82,8 @@
             </div>
             <h3 class="pagination-centered">Contact</h3>
         </a>
-        <p>Are you looking for a nice and affordable hotel in Bulgaria? To make a booking, an appointment to view the centre or for any other query, contact us.
-            We welcome you to the Seasons Lodge Guest House, a family-run, friendly bed and breakfast hotel on the edge of Albena.
-            We enjoy what we are doing. We value our customers and we try to ensure that they will return.
+        <p>Are you looking for a nice and affordable hotel in Bulgaria? To make a booking, an appointment to view the flats or for any other query, contact us.
+            Our reservation team will process your request as soon as possible and get back to you within two business days.
             <a class="js-nav" href="/{{lang}}/contact">... read more</a>
         </p>
     </section>
