--- a/views/home.html
+++ b/views/home.html
@@ -23,7 +23,7 @@
             <h3 class="pagination-centered">Booking</h3>
         </a>
         <p>We know reservation can be a hassle, so let us help you with it. Take advantage our online reservation service to check flats avaiability and book in advance.
-         Our reservation team will check if there are flats available on your chosen dates and get back to you within two business days.
+         Upon booking you may request refreshments / buffets and indicate your preferred room layout. Our reservation team will check if there are flats available on your chosen dates and get back to you within two business days.
             <a class="js-nav" href="/{{lang}}/booking">... read more</a>
         </p>
     </section>
@@ -46,8 +46,8 @@
             </div>
             <h3 class="pagination-centered">Rates</h3>
         </a>
-        <p>Season Lodge Guest House has always prided itself on being a clean and comfortable hotel on the edge of Albena Resort that is high on quality, but not high on price.
-            Upon booking you may request refreshments / buffets and indicate your preferred room layout. All requests will be met where possible and rooms set-up before your arrival to ensure you make the most of your booking time.
+        <p>Looking for a nice and affordable hotel in Bulgaria? Look no further! Season Lodge Guest House has always prided itself on being a clean and comfortable hotel on the edge of Albena Resort that is high on quality, but not high on price.
+            All requests will be met where possible and rooms set-up before your arrival to ensure you make the most of your booking time.
             <a class="js-nav" href="/{{lang}}/rates">... read more</a>
         </p>
     </section>
@@ -82,8 +82,8 @@
             </div>
             <h3 class="pagination-centered">Contact</h3>
         </a>
-        <p>Are you looking for a nice and affordable hotel in Bulgaria? To make a booking, an appointment to view the flats or for any other query, contact us.
-            Our reservation team will process your request as soon as possible and get back to you within two business days.
+        <p>To arrange a convenient time to view the flats, make a booking or for any other query, contact us. From time to time we ask our customers for their comments on their experiences in dealing with us,
+        “how they felt they were treated” and “how can we improve our methods and services”. Please do not hesitate us and drop us a line. Your feedback is always much appreciated.
             <a class="js-nav" href="/{{lang}}/contact">... read more</a>
         </p>
     </section>
