--- a/views/layout.html
+++ b/views/layout.html
@@ -5,6 +5,9 @@
 <meta name="description" content="">
 <title>House Seasons</title>
 <link href="/css/styles.css" rel="stylesheet" type="text/css">
+{{#cssList}}
+<link href="/css/{{.}}.css" rel="stylesheet" type="text/css">
+{{/cssList}}
 </head>
 <body>
 {{> lang}}
