--- a/views/diningphotos.html
+++ b/views/diningphotos.html
@@ -1,43 +1,53 @@
 <div class="row-fluid">
     <div class="img-polaroid img-polaroid-main">
-        <img src="/images/960x340/2.jpg" alt="Hotel Entrance" />
+        <img src="/images/960x340/6.jpg" alt="Garden Fireplace" />
     </div>
 </div>
+<h2 class="row-fluid">Restaurant Photos</h2>
 <div class="row-fluid">
-        <a href="/{{lang}}/booking" class="span4">
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/hotel300x300/10.jpg" alt="Hotel Exterior" />
+                <img src="/images/dining300x300/1.jpg" alt="Restaurant Tables" />
             </div>
-            <h3 class="pagination-centered">Exterior and Interior Photos</h3>
-        </a>
-        <a href="/{{lang}}/gallery" class="span4">
+        </div>
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/1flat300x300/1.jpg" alt="Flat 1"/>
+                <img src="/images/dining300x300/2.jpg" alt="Restaurant Fireplace"/>
             </div>
-            <h3 class="pagination-centered">Flat 1 Photos</h3>
-        </a>
-        <a href="/{{lang}}/rates" class="span4">
+        </div>
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/1.jpg" alt="Flat 2"/>
+                <img src="/images/dining300x300/3.jpg" alt="Restaurent Table 1"/>
             </div>
-            <h3 class="pagination-centered">Flat 2 Photos</h3>
-        </a>
-        <a href="/{{lang}}/location" class="span4">
+        </div>
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/3flat300x300/1.jpg" alt="Flat 3"/>
+                <img src="/images/dining300x300/4.jpg" alt="Restaurent Table 2"/>
             </div>
-            <h3 class="pagination-centered">Flat 3 Photos</h3>
-        </a>
-        <a href="/{{lang}}/location" class="span4">
+        </div>
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/4flat300x300/1.jpg" alt="Flat 4"/>
+                <img src="/images/dining300x300/5.jpg" alt="Restaurant Counter and Bar"/>
             </div>
-            <h3 class="pagination-centered">Flat 4 Photos</h3>
-        </a>
-        <a href="/{{lang}}/contact" class="span4">
+        </div>
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/dining300x300/1.jpg" alt="Dining Area"/>
+                <img src="/images/dining300x300/6.jpg" alt="Garden Bench with Cat on it"/>
             </div>
-            <h3 class="pagination-centered">Dining Area Photos</h3>
-        </a>
+        </div>
+         <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/dining300x300/7.jpg" alt="Water Mill"/>
+            </div>
+        </div>
+         <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/dining300x300/8.jpg" alt="Restaurant Flowers"/>
+            </div>
+        </div>
+         <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/dining300x300/9.jpg" alt="Indoor Fireplace"/>
+            </div>
+        </div>
 </div>
