--- a/views/rates.html
+++ b/views/rates.html
@@ -1,1 +1,75 @@
-<p>AAAAAAAAA</p>
+<div class="row-fluid">
+    <div class="img-polaroid img-polaroid-main">
+        <img src="/images/960x340/10.jpg" alt="Hotel Entrance" />
+    </div>
+</div>
+<section class="row-fluid">
+	<h2>Rates and Prices</h2>
+	<p>Our 4 flats are clean, comfortable and good value. They all offer 4 + 1 beds, freeview television, air conditioning system, fridge, telephone and free wireless internet connection. All flats have a private bathrooms with modern shower and toilet facilities. All price are inclusive of VAT (20% Value Added Tax).
+Upon booking you may request refreshments / buffets and indicate your preferred room layout. All requests will be met where possible and rooms set-up before your arrival to ensure you make the most of your booking time.</p>
+</section>
+<div class="row-fluid">
+        <table class="table table-hover table-bordered table-condensed">
+		<thead>
+		<tr>
+		<th colspan="4">1 Bedroom Holiday Flat price per night*</th>
+		</tr>
+		<tr>
+		<th>Number of Guests</th>
+		<th>October to May</th>
+		<th>June and Sep­tember</th>
+		<th>July and August</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+		<td>2</td>
+		<td>Flexible</td>
+		<td>20 Euros </td>
+		<td>23 Euros</td>
+		</tr>
+		<tr>
+		<td>3</td>
+		<td>Flexible</td>
+		<td>25 Euros</td>
+		<td>30 Euros</td>
+		</tr>
+		<tr>
+		<td>4</td>
+		<td>Flexible</td>
+		<td>30 Euros</td>
+		<td>38 Euros</td>
+		</tr>
+		</tbody>
+	</table>
+
+	<table class="table table-hover table-bordered table-condensed">
+		<thead>
+		<tr>
+		<th colspan="4">2 Bedroom Holiday Flat price per night**</th>
+		</tr>
+		<tr>
+		<th>Number of Guests</th>
+		<th>October to May</th>
+		<th>June and Sep­tember</th>
+		<th>July and August</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+		<td>up to 4</td>
+		<td>Flexible</td>
+		<td>30 Euros </td>
+		<td>38 Euros</td>
+		</tr>
+		</tbody>
+	</table>
+
+	<p>
+    * Extra person is at additional charge of 10 Euros per person per night. Maximum 2 additional adults is allowed. <br>
+    ** Access to kitchen facilities (for an additional charge of 5 Euros per night).<br>
+    Breakfast, Lunch and Dinner at Seasons Lodge House are tailored to suit the individual needs of each guest (ordered in advanced).<br>
+    Discounts are available for renting the whole guest house.<br>
+    Children under the age of 4 are free of charge.
+	</p>
+</div>
