--- a/views/flat3photos.html
+++ b/views/flat3photos.html
@@ -1,43 +1,38 @@
 <div class="row-fluid">
     <div class="img-polaroid img-polaroid-main">
-        <img src="/images/960x340/2.jpg" alt="Hotel Entrance" />
+        <img src="/images/960x340/8.jpg" alt="Double Bed" />
     </div>
 </div>
+<h2 class="row-fluid">Third Floor Flat Photos</h2>
 <div class="row-fluid">
-        <a href="/{{lang}}/booking" class="span4">
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/hotel300x300/10.jpg" alt="Hotel Exterior" />
+                <img src="/images/3flat300x300/1.jpg" alt="2 Single Beds" />
             </div>
-            <h3 class="pagination-centered">Exterior and Interior Photos</h3>
-        </a>
-        <a href="/{{lang}}/gallery" class="span4">
+        </div>
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/1flat300x300/1.jpg" alt="Flat 1"/>
+                <img src="/images/3flat300x300/2.jpg" alt="Entrance and Plant"/>
             </div>
-            <h3 class="pagination-centered">Flat 1 Photos</h3>
-        </a>
-        <a href="/{{lang}}/rates" class="span4">
+        </div>
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/1.jpg" alt="Flat 2"/>
+                <img src="/images/3flat300x300/3.jpg" alt="Mirror and TV Set"/>
             </div>
-            <h3 class="pagination-centered">Flat 2 Photos</h3>
-        </a>
-        <a href="/{{lang}}/location" class="span4">
+        </div>
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/3flat300x300/1.jpg" alt="Flat 3"/>
+                <img src="/images/3flat300x300/4.jpg" alt="Sofa and Windows"/>
             </div>
-            <h3 class="pagination-centered">Flat 3 Photos</h3>
-        </a>
-        <a href="/{{lang}}/location" class="span4">
+        </div>
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/4flat300x300/1.jpg" alt="Flat 4"/>
+                <img src="/images/3flat300x300/5.jpg" alt="2 Single Beds Alternative View"/>
             </div>
-            <h3 class="pagination-centered">Flat 4 Photos</h3>
-        </a>
-        <a href="/{{lang}}/contact" class="span4">
+        </div>
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/dining300x300/1.jpg" alt="Dining Area"/>
+                <img src="/images/3flat300x300/6.jpg" alt="Bathroom Shower"/>
             </div>
-            <h3 class="pagination-centered">Dining Area Photos</h3>
-        </a>
+        </div>
 </div>
