--- a/views/rates.html
+++ b/views/rates.html
@@ -5,8 +5,8 @@
 </div>
 <section class="row-fluid">
 	<h2>Rates and Prices</h2>
-	<p>Our 4 flats are clean, comfortable and good value. They all offer 4 + 1 beds, freeview television, air conditioning system, fridge, telephone and free wireless internet connection. All flats have a private bathrooms with modern shower and toilet facilities. All price are inclusive of VAT (20% Value Added Tax).
-Upon booking you may request refreshments / buffets and indicate your preferred room layout. All requests will be met where possible and rooms set-up before your arrival to ensure you make the most of your booking time.</p>
+	<p>Our 4 flats are clean, comfortable and good value. They all offer 1 king size bed, 2 single beds and 1 convertible bed couch, freeview television, air conditioning system, fridge and free wireless internet connection. All flats have a private bathrooms with shower and toilet facilities. 
+Upon booking you may request refreshments / buffets (additional charges apply) and indicate your preferred flat. All requests will be met where possible and flats set-up before your arrival to ensure you make the most of your booking time. All prices include VAT (20% Value Added Tax).</p>
 </section>
 <div class="row-fluid">
         <table class="table table-hover table-bordered table-condensed">
