--- a/views/gallery.html
+++ b/views/gallery.html
@@ -6,7 +6,7 @@
 <section class="row-fluid">
 	<h2>Gallery</h2>
 	<p>The Seasons Lodge Guest House is a hotel dedicated to offering you great value and quality services. With this in mind, all of our members strive to make the guest experience as individual, hospitable and affordable as possible.
-Our 4 flats are clean, comfortable and good value. They all offer 4 + 1 beds, freeview television, air conditioning system, fridge, telephone and free wireless internet connection. All flats have a private bathrooms with modern shower and toilet facilities.</p>
+Our 4 flats are clean, comfortable and good value. They all offer 1 king size bed, 2 single beds and 1 convertible bed couch, freeview television, air conditioning system, fridge and free wireless internet connection. All flats have a private bathrooms with shower and toilet facilities.</p>
 </section>
 <div class="row-fluid">
         <a href="/{{lang}}/gallery/hotelphotos" class="span4 js-nav">
