--- a/views/rates.html
+++ b/views/rates.html
@@ -5,7 +5,8 @@
 </div>
 <section class="row-fluid">
 	<h2>Rates and Prices</h2>
-	<p>Our 4 flats are clean, comfortable and good value. They all offer 1 king size bed, 2 single beds and 1 convertible bed couch, freeview television, air conditioning system, fridge and free wireless internet connection. All flats have a private bathrooms with shower and toilet facilities. 
+	<p>
+Seasons Lodge Guest House is a place dedicated to offering you great value and quality services. With this in mind, all of our members strive to make the guest experience as individual, hospitable and affordable as possible.
 Upon booking you may request refreshments / buffets (additional charges apply) and indicate your preferred flat. All requests will be met where possible and flats set-up before your arrival to ensure you make the most of your booking time. All prices include VAT (20% Value Added Tax).</p>
 </section>
 <div class="row-fluid">
