--- a/views/contact.html
+++ b/views/contact.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <section class="row-fluid">
-    <h2>Contact</h2>
+    <h2 class="capitalise">{{#__}}contact{{/__}}</h2>
     <p>
         Staff are available to arrange pick-up services, ticket bookings and assist with postal needs. Please arrange this service while booking the accommodation. Transport and transfer service is subject to additional charge.<br>
         You can use the google map widget to get a better understanding of the exact location. Driving Route Planner isalso included. 
@@ -12,18 +12,18 @@
 </section>
 <div class="row-fluid">
     <form method="post">
-        <p>Your Name (required)<span class="input-prepend"><br>
+        <p><span class="capitalise">{{#__}}your{{/__}} {{#__}}name{{/__}}</span> ({{#__}}required{{/__}})<span class="input-prepend"><br>
             <span class="add-on"><i class="icon-user"></i></span>
             <input type="text" name="your-name" value="" size="40" aria-required="true" aria-invalid="false">
         </p>
-        <p>Your Email (required)<span class="input-prepend"><br>
+        <p><span class="capitalise">{{#__}}your{{/__}} {{#__}}email{{/__}}</span> ({{#__}}required{{/__}})<span class="input-prepend"><br>
             <span class="add-on"><i class="icon-envelope"></i></span>
             <input type="email" name="your-email" value="" size="40" aria-required="true" aria-invalid="false">
         </p>
-        <p>Subject<br>
+        <p class="capitalise">{{#__}}Subject{{/__}<br>
             <input type="text" name="your-subject" value="" size="40" aria-invalid="false">
         </p>
-        <p>Your Message<br>
+        <p class="capitalise">{{#__}}your{{/__}} {{#__}}message{{/__}}<br>
             <textarea name="your-message" cols="40" rows="10" aria-invalid="false"></textarea>
         </p>
         <p><input type="submit" value="Send"><img class="ajax-loader" src="http://localhost/wordpress1/wp-content/plugins/contact-form-7/images/ajax-loader.gif" alt="Sending ..." style="visibility: hidden;"></p>
