--- a/views/rates.html
+++ b/views/rates.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <section class="row-fluid">
-    <h2>Rates and Prices</h2>
+    <h2><span class="capitalise">{{#__}}rates{{/__}}</span> <span class="capitalise">and</span> <span class="capitalise">{{#__}}prices{{/__}}</span></h2>
     <p>
         Seasons Lodge Guest House is a place dedicated to offering you great value and quality services. With this in mind, all of our members strive to make the guest experience as individual, hospitable and affordable as possible.
         Upon booking you may request refreshments / buffets (additional charges apply) and indicate your preferred flat. All requests will be met where possible and flats set-up before your arrival to ensure you make the most of your booking time. All prices include VAT (20% Value Added Tax).
@@ -23,24 +23,24 @@
                 <th>{{#__}}ratestblth4{{/__}}</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="capitalise">
             <tr>
                 <td data-th="{{#__}}ratestblth1{{/__}}">2</td>
-                <td data-th="{{#__}}ratestblth2{{/__}}">{{#__}}Flexible{{/__}}</td>
-                <td data-th="{{#__}}ratestblth3{{/__}}">20 {{#__}}Euros{{/__}} </td>
-                <td data-th="{{#__}}ratestblth4{{/__}}">23 {{#__}}Euros{{/__}}</td>
+                <td data-th="{{#__}}ratestblth2{{/__}}">{{#__}}flexible{{/__}}</td>
+                <td data-th="{{#__}}ratestblth3{{/__}}">20 {{#__}}euros{{/__}}</td>
+                <td data-th="{{#__}}ratestblth4{{/__}}">23 {{#__}}euros{{/__}}</td>
             </tr>
             <tr>
                 <td data-th="{{#__}}ratestblth1{{/__}}">3</td>
-                <td data-th="{{#__}}ratestblth2{{/__}}">{{#__}}Flexible{{/__}}</td>
-                <td data-th="{{#__}}ratestblth3{{/__}}">25 {{#__}}Euros{{/__}}</td>
-                <td data-th="{{#__}}ratestblth4{{/__}}">30 {{#__}}Euros{{/__}}</td>
+                <td data-th="{{#__}}ratestblth2{{/__}}">{{#__}}flexible{{/__}}</td>
+                <td data-th="{{#__}}ratestblth3{{/__}}">25 {{#__}}euros{{/__}}</td>
+                <td data-th="{{#__}}ratestblth4{{/__}}">30 {{#__}}euros{{/__}}</td>
             </tr>
             <tr>
                 <td data-th="{{#__}}ratestblth1{{/__}}">4</td>
-                <td data-th="{{#__}}ratestblth2{{/__}}">{{#__}}Flexible{{/__}}</td>
-                <td data-th="{{#__}}ratestblth3{{/__}}">30 {{#__}}Euros{{/__}}</td>
-                <td data-th="{{#__}}ratestblth4{{/__}}">38 {{#__}}Euros{{/__}}</td>
+                <td data-th="{{#__}}ratestblth2{{/__}}">{{#__}}flexible{{/__}}</td>
+                <td data-th="{{#__}}ratestblth3{{/__}}">30 {{#__}}euros{{/__}}</td>
+                <td data-th="{{#__}}ratestblth4{{/__}}">38 {{#__}}euros{{/__}}</td>
             </tr>
         </tbody>
     </table>
@@ -59,9 +59,9 @@
         <tbody>
             <tr>
                 <td data-th="{{#__}}ratestblth1{{/__}}">{{#__}}upto{{/__}} 4</td>
-                <td data-th="{{#__}}ratestblth2{{/__}}">{{#__}}Flexible{{/__}}</td>
-                <td data-th="{{#__}}ratestblth3{{/__}}">30 {{#__}}Euros{{/__}} </td>
-                <td data-th="{{#__}}ratestblth4{{/__}}">38 {{#__}}Euros{{/__}}</td>
+                <td class="capitalise" data-th="{{#__}}ratestblth2{{/__}}">{{#__}}flexible{{/__}}</td>
+                <td class="capitalise" data-th="{{#__}}ratestblth3{{/__}}">30 {{#__}}euros{{/__}} </td>
+                <td class="capitalise" data-th="{{#__}}ratestblth4{{/__}}">38 {{#__}}euros{{/__}}</td>
             </tr>
         </tbody>
     </table>
