--- a/views/contact.html
+++ b/views/contact.html
@@ -6,8 +6,7 @@
 <section class="row-fluid">
     <h2 class="capitalise">{{#__}}contact{{/__}}</h2>
     <p>
-        Staff are available to arrange pick-up services, ticket bookings and assist with postal needs. Please arrange this service while booking the accommodation. Transport and transfer service is subject to additional charge.<br>
-        You can use the google map widget to get a better understanding of the exact location. Driving Route Planner isalso included. 
+        {{#__}}your{{/__}}
     </p>
 </section>
 <div class="row-fluid">
