--- a/views/contact.html
+++ b/views/contact.html
@@ -6,7 +6,7 @@
 <section class="row-fluid">
     <h2 class="capitalise">{{#__}}contact{{/__}}</h2>
     <p>
-        {{#__}}your{{/__}}
+        {{#__}}contactmaindesc{{/__}}
     </p>
 </section>
 <div class="row-fluid">
