--- a/views/rates.html
+++ b/views/rates.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <section class="row-fluid">
-    <h2><span class="capitalise">{{#__}}rates{{/__}}</span> <span class="capitalise">and</span> <span class="capitalise">{{#__}}prices{{/__}}</span></h2>
+    <h2><span class="capitalise">{{#__}}prices{{/__}}</h2>
     <p>{{#__}}ratesmaindesc{{/__}</p>
 </section>
 <div class="row-fluid">
