--- a/views/home.html
+++ b/views/home.html
@@ -4,16 +4,7 @@
     </div>
 </div>
 <div class="row-fluid">
-    The Seasons Lodge Guest House is one of the finest three stars hotels on the east coast of Bulgaria.
-    The hotel is located on the edge of Albena in an old fishing village of Golden Fish. Golden Fish village is quiet residential area within a short 
-    distance of the Albena centre and is only a stone throw away from the beach. It offers 4 comfortable air-conditioned flats with sea views.
-    
-    Being a privately owned and family run hotel allows us to make sure our residents and guests will always be treated as individuals and with respect,
-    as we would like to be treated ourselves. We have a very good working relationship with many local businesses and private individuals alike so
-    we can always assist wherever possible. The friendly family atmosphere that our customers experience is always warmly welcomed as is the good advice that is given with a smile.
-
-    We try our very best to make sure our customers stay is as comfortable and convienient as possible.
-</div>
+    {{#__}}homemaindesc{{/__}}
 <div class="row-fluid">
     <section class="span4">
         <a class="js-nav" href="/{{lang}}/booking">
@@ -22,8 +13,7 @@
             </div>
             <h3 class="pagination-centered">Booking</h3>
         </a>
-        <p>We know reservation can be a hassle, so let us help you with it. Take advantage our online reservation service to check flats avaiability and book in advance.
-         Upon booking you may request refreshments / buffets and indicate your preferred room layout. Our reservation team will check if there are flats available on your chosen dates and get back to you within two business days.
+        <p>
             <a class="js-nav" href="/{{lang}}/booking">... read more</a>
         </p>
     </section>
