--- a/views/home.html
+++ b/views/home.html
@@ -13,9 +13,7 @@
             </div>
             <h3 class="pagination-centered">Booking</h3>
         </a>
-        <p>
-            <a class="js-nav" href="/{{lang}}/booking">... read more</a>
-        </p>
+        <p>{{#__}}homebooking{{/__}}<a class="js-nav" href="/{{lang}}/booking">... read more</a></p>
     </section>
     <section class="span4">
         <a class="js-nav" href="/{{lang}}/gallery">
@@ -24,10 +22,7 @@
             </div>
             <h3 class="pagination-centered">Gallery</h3>
         </a>
-        <p>All 4 flats are decorated in a truly elegant Bulgarian style and offer a wonderful views of the Black sea. Due to the unique nature of House Season guest house, each flat has a personality of its own and no two are alike. 
-            Each individually designed flat has been created with an emphasis on supreme comfort and relaxation.
-            <a class="js-nav" href="/{{lang}}/gallery">... read more</a>
-        </p>
+        <p>{{#__}}homegallery{{/__}}<a class="js-nav" href="/{{lang}}/gallery">... read more</a></p>
     </section>
     <section class="span4">
         <a class="js-nav" href="/{{lang}}/rates">
@@ -36,10 +31,7 @@
             </div>
             <h3 class="pagination-centered">Rates</h3>
         </a>
-        <p>Looking for a nice and affordable hotel in Bulgaria? Look no further! Season Lodge Guest House has always prided itself on being a clean and comfortable hotel on the edge of Albena Resort that is high on quality, but not high on price.
-            All requests will be met where possible and rooms set-up before your arrival to ensure you make the most of your booking time.
-            <a class="js-nav" href="/{{lang}}/rates">... read more</a>
-        </p>
+        <p>{{#__}}homeprices{{/__}}<a class="js-nav" href="/{{lang}}/rates">... read more</a></p>
     </section>
     <section class="span4">
         <a class="js-nav" href="/{{lang}}/location">
@@ -48,10 +40,7 @@
             </div>
             <h3 class="pagination-centered">Location</h3>
         </a>
-        <p>Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind.
-            We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area six miles from the historic and ancient City of Balchik.
-            <a class="js-nav" href="/{{lang}}/location">... read more</a>
-        </p>
+        <p>{{#__}}homelocation{{/__}}<a class="js-nav" href="/{{lang}}/location">... read more</a></p>
     </section>
     <section class="span4">
         <a class="js-nav" href="/{{lang}}/location">
@@ -60,10 +49,7 @@
             </div>
             <h3 class="pagination-centered">Blog</h3>
         </a>
-        <p>Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind.
-            We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area six miles from the historic and ancient City of Balchik.
-            <a class="js-nav" href="/{{lang}}/location">... read more</a>
-        </p>
+        <p>{{#__}}homeblog{{/__}}<a class="js-nav" href="/{{lang}}/blog">... read more</a></p>
     </section>
     <section class="span4">
         <a class="js-nav" href="/{{lang}}/contact">
@@ -72,9 +58,6 @@
             </div>
             <h3 class="pagination-centered">Contact</h3>
         </a>
-        <p>To arrange a convenient time to view the flats, make a booking or for any other query, contact us. From time to time we ask our customers for their comments on their experiences in dealing with us,
-        “how they felt they were treated” and “how can we improve our methods and services”. Please do not hesitate us and drop us a line. Your feedback is always much appreciated.
-            <a class="js-nav" href="/{{lang}}/contact">... read more</a>
-        </p>
+        <p>{{#__}}homecontact{{/__}}<a class="js-nav" href="/{{lang}}/contact">... read more</a></p>
     </section>
 </div>
