--- a/views/home.html
+++ b/views/home.html
@@ -11,7 +11,7 @@
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/11.jpg" alt="Booking Calendar" />
             </div>
-            <h3 class="pagination-centered">Booking</h3>
+            <h3 class="pagination-centered">{{#__}}booking{{/__}}</h3>
         </a>
         <p>{{#__}}homebooking{{/__}}<a class="js-nav" href="/{{lang}}/booking">... read more</a></p>
     </section>
@@ -20,7 +20,7 @@
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/3.jpg" alt="Hotel Gallery" />
             </div>
-            <h3 class="pagination-centered">Gallery</h3>
+            <h3 class="pagination-centered">{{#__}}gallery{{/__}}</h3>
         </a>
         <p>{{#__}}homegallery{{/__}}<a class="js-nav" href="/{{lang}}/gallery">... read more</a></p>
     </section>
@@ -29,7 +29,7 @@
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/13.jpg" alt="Rates and Prices"/>
             </div>
-            <h3 class="pagination-centered">Rates</h3>
+            <h3 class="pagination-centered">{{#__}}prices{{/__}}</h3>
         </a>
         <p>{{#__}}homeprices{{/__}}<a class="js-nav" href="/{{lang}}/rates">... read more</a></p>
     </section>
@@ -38,7 +38,7 @@
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/12.jpg" alt="Hotel Location"/>
             </div>
-            <h3 class="pagination-centered">Location</h3>
+            <h3 class="pagination-centered">{{#__}}location{{/__}}</h3>
         </a>
         <p>{{#__}}homelocation{{/__}}<a class="js-nav" href="/{{lang}}/location">... read more</a></p>
     </section>
@@ -47,7 +47,7 @@
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/14.jpg" alt="Hotel Blog"/>
             </div>
-            <h3 class="pagination-centered">Blog</h3>
+            <h3 class="pagination-centered">{{#__}}blog{{/__}}</h3>
         </a>
         <p>{{#__}}homeblog{{/__}}<a class="js-nav" href="/{{lang}}/blog">... read more</a></p>
     </section>
@@ -56,7 +56,7 @@
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/15.jpg" alt="Contact Us"/>
             </div>
-            <h3 class="pagination-centered">Contact</h3>
+            <h3 class="pagination-centered">{{#__}}contact{{/__}}</h3>
         </a>
         <p>{{#__}}homecontact{{/__}}<a class="js-nav" href="/{{lang}}/contact">... read more</a></p>
     </section>
