--- a/views/contact.html
+++ b/views/contact.html
@@ -11,19 +11,19 @@
 </section>
 <div class="row-fluid">
     <form method="post">
-        <p><span class="capitalise">{{#__}}your{{/__}} {{#__}}name{{/__}}</span> ({{#__}}required{{/__}})<span class="input-prepend"><br>
+        <p><label for="username" class="capitalise">{{#__}}your{{/__}} {{#__}}name{{/__}}</label> ({{#__}}required{{/__}})<span class="input-prepend"><br>
             <span class="add-on"><i class="icon-user"></i></span>
-            <input type="text" name="your-name" value="" size="40" aria-required="true" aria-invalid="false">
+            <input id="username" type="text" name="your-name" value="" size="40" aria-required="true" aria-invalid="false">
         </p>
-        <p><span class="capitalise">{{#__}}your{{/__}} {{#__}}email{{/__}}</span> ({{#__}}required{{/__}})<span class="input-prepend"><br>
+        <p><label class="capitalise">{{#__}}your{{/__}} {{#__}}email{{/__}}</label> ({{#__}}required{{/__}})<span class="input-prepend"><br>
             <span class="add-on"><i class="icon-envelope"></i></span>
-            <input type="email" name="your-email" value="" size="40" aria-required="true" aria-invalid="false">
+            <input id="useremail" type="email" name="your-email" value="" size="40" aria-required="true" aria-invalid="false">
         </p>
-        <p class="capitalise">{{#__}}Subject{{/__}<br>
-            <input type="text" name="your-subject" value="" size="40" aria-invalid="false">
+        <p><label for="usersubject"> class="capitalise">{{#__}}Subject{{/__}</label><br>
+            <input id-"usersubject" type="text" name="your-subject" value="" size="40" aria-invalid="false">
         </p>
-        <p class="capitalise">{{#__}}your{{/__}} {{#__}}message{{/__}}<br>
-            <textarea name="your-message" cols="40" rows="10" aria-invalid="false"></textarea>
+        <p><label for="usermessage" class="capitalise">{{#__}}your{{/__}} {{#__}}message{{/__}}</label><br>
+            <textarea id="usermessage" name="your-message" cols="40" rows="10" aria-invalid="false"></textarea>
         </p>
         <p><input type="submit" value="Send"><img class="ajax-loader" src="http://localhost/wordpress1/wp-content/plugins/contact-form-7/images/ajax-loader.gif" alt="Sending ..." style="visibility: hidden;"></p>
     </form>
