--- a/views/hotelphotos.html
+++ b/views/hotelphotos.html
@@ -3,7 +3,7 @@
         <img src="/images/960x340/4.jpg" alt="Hotel Entrance" />
     </div>
 </div>
-<h2 class="row-fluid">Exterior and Interior Photos</h2>
+<h2 class="row-fluid">{{#__}}exteriorinteriorphotos{{/__}}</h2>
 <div class="row-fluid">
         <div class="span4">
             <div class="img-polaroid">
