--- a/views/diningphotos.html
+++ b/views/diningphotos.html
@@ -3,7 +3,7 @@
         <img src="/images/960x340/6.jpg" alt="Garden Fireplace" />
     </div>
 </div>
-<h2 class="row-fluid">Restaurant Photos</h2>
+<h2 class="row-fluid">{{#__}}diningareaphotos{{/__}}</h2>
 <div class="row-fluid">
         <div class="span4">
             <div class="img-polaroid">
