--- a/views/flat1photos.html
+++ b/views/flat1photos.html
@@ -3,7 +3,7 @@
         <img src="/images/960x340/3.jpg" alt="Hotel Entrance" />
     </div>
 </div>
-<h2 class="row-fluid">First Floor Flat Photos</h2>
+<h2 class="row-fluid">{{#__}}flat1photos{{/__}}</h2>
 <div class="row-fluid">
         <div class="span4">
             <div class="img-polaroid">
