--- a/views/flat3photos.html
+++ b/views/flat3photos.html
@@ -3,7 +3,7 @@
         <img src="/images/960x340/8.jpg" alt="Double Bed" />
     </div>
 </div>
-<h2 class="row-fluid">Third Floor Flat Photos</h2>
+<h2 class="row-fluid">{{#__}}flat3photos{{/__}}</h2>
 <div class="row-fluid">
         <div class="span4">
             <div class="img-polaroid">
