--- a/views/flat4photos.html
+++ b/views/flat4photos.html
@@ -3,7 +3,7 @@
         <img src="/images/960x340/11.jpg" alt="Table and Couch" />
     </div>
 </div>
-<h2 class="row-fluid">Standalone Flat Photos</h2>
+<h2 class="row-fluid">{{#__}}flat4photos{{/__}}</h2>
 <div class="row-fluid">
         <div class="span4">
             <div class="img-polaroid">
