--- a/views/gallery.html
+++ b/views/gallery.html
@@ -4,46 +4,45 @@
     </div>
 </div>
 <section class="row-fluid">
-	<h2>Gallery</h2>
+	<h2>{{#__}}gallery{{/__}}</h2>
 	<p>
-Our 4 flats are clean, comfortable and good value. They all offer 1 king size bed, 2 single beds and 1 convertible bed couch, freeview television, air conditioning system, fridge and free wireless internet connection. Each flat occupies its own floor and has a private bathrooms with shower and toilet facilities.
-There is a lovely garden located at the rear of a property which features extensive lawn, wooden decking patio and barbeque area. Dining area on underground floor provides seating for up to 30 guest around oak tables in a friendly relaxed atmosphere.
+{{#__}}gallerymaindesc{{/__}}
 </p></section>
 <div class="row-fluid">
         <a href="/{{lang}}/gallery/hotelphotos" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/10.jpg" alt="Hotel Exterior" />
             </div>
-            <h3 class="pagination-centered">Exterior and Interior Photos</h3>
+            <h3 class="pagination-centered">{{#__}}exteriorinteriorphotos{{/__}}</h3>
         </a>
         <a href="/{{lang}}/gallery/flat1photos" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/1flat300x300/1.jpg" alt="Flat 1"/>
             </div>
-            <h3 class="pagination-centered">Flat 1 Photos</h3>
+            <h3 class="pagination-centered">{{#__}}flat1photos{{/__}}</h3>
         </a>
         <a href="/{{lang}}/gallery/flat2photos" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/2flat300x300/1.jpg" alt="Flat 2"/>
             </div>
-            <h3 class="pagination-centered">Flat 2 Photos</h3>
+            <h3 class="pagination-centered">{{#__}}flat2photos{{/__}}</h3>
         </a>
         <a href="/{{lang}}/gallery/flat3photos" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/3flat300x300/1.jpg" alt="Flat 3"/>
             </div>
-            <h3 class="pagination-centered">Flat 3 Photos</h3>
+            <h3 class="pagination-centered">{{#__}}flat3photos{{/__}}</h3>
         </a>
         <a href="/{{lang}}/gallery/flat4photos" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/4flat300x300/1.jpg" alt="Flat 4"/>
             </div>
-            <h3 class="pagination-centered">Flat 4 Photos</h3>
+            <h3 class="pagination-centered">{{#__}}flat4photos{{/__}}</h3>
         </a>
         <a href="/{{lang}}/gallery/diningphotos" class="span4 js-nav">
             <div class="img-polaroid">
                 <img src="/images/dining300x300/1.jpg" alt="Dining Area"/>
             </div>
-            <h3 class="pagination-centered">Dining Area Photos</h3>
+            <h3 class="pagination-centered">{{#__}}diningareaphotos{{/__}}</h3>
         </a>
 </div>
