--- a/views/gallery.html
+++ b/views/gallery.html
@@ -5,9 +5,8 @@
 </div>
 <section class="row-fluid">
 	<h2>{{#__}}gallery{{/__}}</h2>
-	<p>
-{{#__}}gallerymaindesc{{/__}}
-</p></section>
+	<p>{{#__}}gallerymaindesc{{/__}}</p>
+</section>
 <div class="row-fluid">
         <a href="/{{lang}}/gallery/hotelphotos" class="span4 js-nav">
             <div class="img-polaroid">
