--- a/views/contact.html
+++ b/views/contact.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <section class="row-fluid">
-    <h2 class="capitalise">{{#__}}contact{{/__}}</h2>
+    <h2>{{#__}}contact{{/__}}</h2>
     <p>
         {{#__}}contactmaindesc{{/__}}
     </p>
@@ -20,7 +20,7 @@
             <input id="useremail" type="email" name="your-email" value="" size="40" aria-required="true" aria-invalid="false">
         </p>
         <p><label for="usersubject"> class="capitalise">{{#__}}Subject{{/__}</label><br>
-            <input id-"usersubject" type="text" name="your-subject" value="" size="40" aria-invalid="false">
+            <input id="usersubject" type="text" name="your-subject" value="" size="40" aria-invalid="false">
         </p>
         <p><label for="usermessage" class="capitalise">{{#__}}your{{/__}} {{#__}}message{{/__}}</label><br>
             <textarea id="usermessage" name="your-message" cols="40" rows="10" aria-invalid="false"></textarea>
