--- a/views/header.html
+++ b/views/header.html
@@ -2,13 +2,13 @@
 	<input type="checkbox" id="navbar-checkbox" class="navbar-checkbox">
 	<nav id="main-nav" class="{{currentpage}}">
 	    <ul>
-	        <li><a class="js-nav" href="/{{lang}}/">{{#__}}Home{{/__}}</a>
-	        <li><a class="js-nav" href="/{{lang}}/booking">{{#__}}Booking{{/__}}</a>
-	        <li><a class="js-nav" href="/{{lang}}/gallery">{{#__}}Gallery{{/__}}</a>
-	        <li><a class="js-nav" href="/{{lang}}/rates">{{#__}}Rates{{/__}}</a>
-	        <li><a class="js-nav" href="/{{lang}}/location">{{#__}}Location{{/__}}</a>
-	        <li><a class="js-nav" href="/{{lang}}/contact">{{#__}}Contact{{/__}}</a>
-	        <li class="nav-dropdown"><a href="#lang-menu">{{#__}}Language{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/">{{#__}}home{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/booking">{{#__}}booking{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/gallery">{{#__}}gallery{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/rates">{{#__}}rates{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/location">{{#__}}location{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/contact">{{#__}}contact{{/__}}</a>
+	        <li class="nav-dropdown"><a href="#lang-menu">{{#__}}language{{/__}}</a>
 	    </ul>
 	    <label for="navbar-checkbox" class="navbar-handle"></label>
 	</nav>
