--- a/views/lang.html
+++ b/views/lang.html
@@ -1,6 +1,6 @@
 <div id="lang-menu">
 	<ul >
-		<li><a href="#">‹ Back</a></li>
+		<li><a href="#">‹ {{#__}}back{{/__}}</a></li>
 		{{#langList}}
 		<li>
 			{{#link}}
