--- a/views/layout.html
+++ b/views/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{lang}}">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta charset="UTF-8" />
         <meta name="description" content="">
         <title>House Seasons</title>
         <link href="/css/styles.css" rel="stylesheet" type="text/css">
