--- a/views/location.html
+++ b/views/location.html
@@ -6,26 +6,9 @@
 <section class="row-fluid">
     <h2>{{#__}}location{{/__}}</h2>
     <p>
-        {{#__}}locationtmaindesc{{/__}}
+        {{#__}}homelocation{{/__}}{{#__}}locationtmaindesc{{/__}}
     </p>
 </section>
 <div class="row-fluid">
-    <form method="post">
-        <p><span>{{#__}}yourname{{/__}}</span> ({{#__}}required{{/__}})<span class="input-prepend"><br>
-            <span class="add-on"><i class="icon-user"></i></span>
-            <input class="get-value" type="text" name="username" value="" size="40" aria-required="true" aria-invalid="false">
-        </p>
-        <p><span>{{#__}}youremail{{/__}}</span> ({{#__}}required{{/__}})<span class="input-prepend"><br>
-            <span class="add-on"><i class="icon-envelope"></i></span>
-            <input class="get-value" type="email" name="useremail" value="" size="40" aria-required="true" aria-invalid="false">
-        </p>
-        <p>{{#__}}Subject{{/__}}<br>
-            <input class="get-value" type="text" name="subject" value="" size="40" aria-invalid="false">
-        </p>
-        <p>{{#__}}yourmessage{{/__}}<br>
-            <textarea class="get-value" name="message" cols="40" rows="10" aria-invalid="false"></textarea>
-        </p>
-        {{> submit}}
-    </form>
 </div>
 <script src="/../js/basic_form.js"></script>
