--- a/views/submit.html
+++ b/views/submit.html
@@ -1,12 +1,5 @@
-<p id="submit-button">
-    <input type="submit" value="Send">
-</p>
-<p  id="submit-pending" class="submit-states">
-    <input type="submit" value="Sending">
-</p>
-<p id="submit-success" class="submit-states">
-    message sent successfully
-</p>
-<p id="submit-fail" class="submit-states">
-    delivery failure
-</p>
+<input id="submit-button" type="submit" value="Send">
+<div id="submit-pending" class="submit-states">sending...</div>
+<div id="reset-form" class="submit-states">OK</div>
+<span id="submit-success" class="submit-states">message sent successfully</span>
+<span id="submit-fail" class="submit-states">delivery failure</span>
