--- a/views/location.html
+++ b/views/location.html
@@ -11,4 +11,4 @@
 </section>
 <div class="row-fluid">
 </div>
-<script src="/../js/basic_form.js"></script>
+<script src="/../js/g-map.js"></script>
