--- a/views/submit.html
+++ b/views/submit.html
@@ -1,5 +1,5 @@
 <input id="submit-button" type="submit" value="Send">
-<div id="submit-pending" class="submit-states">sending...</div>
-<div id="reset-form" class="submit-states">OK</div>
-<span id="submit-success" class="submit-states">message sent successfully</span>
-<span id="submit-fail" class="submit-states">delivery failure</span>
+<div id="submit-pending" class="submit-states">{{#__}}sending__{{/__}}</div>
+<div id="reset-form" class="submit-states">{{#__}}OK{{/__}}</div>
+<span id="submit-success" class="submit-states">{{#__}}messagesentsuccessfully{{/__}}</span>
+<span id="submit-fail" class="submit-states">{{#__}}deliveryfailure{{/__}}</span>
