--- a/views/location.html
+++ b/views/location.html
@@ -10,5 +10,11 @@
     </p>
 </section>
 <div class="row-fluid">
+    <div id="map-container">
+        <div id="map-canvas"></div>
+        <button class="btn btn-primary" type="button" id="route-btn" data-states='["Suggest a Route", "Return to the Original Map"]'>Suggest a Route</button>
+        <div id="map-directions"></div>
+    </div>
 </div>
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script src="/../js/g-map.js"></script>
