--- a/views/location.html
+++ b/views/location.html
@@ -11,7 +11,11 @@
 </section>
 <div class="row-fluid">
     <div id="map-container">
-        <div id="map-canvas"></div>
+        <div id="map-canvas">
+            <noscript>
+                <img src="/images/960x340/15.jpg" alt="Bird's eye Albena map"/>
+            </noscript>
+        </div>
         <button class="btn btn-primary" type="button" id="route-btn" data-states='["Suggest a Route", "Return to the Original Map"]'>Suggest a Route</button>
         <div id="map-directions"></div>
     </div>
