--- a/views/location.html
+++ b/views/location.html
@@ -16,9 +16,9 @@
                 <img src="/images/960x340/15.jpg" alt="Bird's eye Albena map"/>
             </noscript>
         </div>
-        <button class="btn btn-primary" type="button" id="route-btn" data-states='["Suggest a Route", "Return to the Original Map"]'>Suggest a Route</button>
+        <button class="btn btn-primary" type="button" id="route-btn" data-states='["{{#__}}suggestaroute{{/__}}", "{{#__}}returntotheoriginalmap{{/__}}"]'>{{#__}}suggestaroute{{/__}}</button>
         <div id="map-directions"></div>
     </div>
 </div>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script src="/../js/g-map.js"></script>
+<script src="/../js/g_map.js"></script>
