--- a/views/booking.html
+++ b/views/booking.html
@@ -10,8 +10,16 @@
     </p>
 </section>
 <fieldset>
-<p>Select a flat (required)<span class="input-prepend"><br>
-   <span class="add-on"><i class="icon-home"></i></span><span class="wpcf7-form-control-wrap menu-262"><select name="menu-262" class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required" id="Flats" aria-required="true" aria-invalid="false"><option value="Flat 1">Flat 1</option><option value="Flat 2">Flat 2</option><option value="Flat 3">Flat 3</option><option value="Flat 4">Flat 4</option><option value="Whole House">Whole House</option></select></span></span></p>
+<p>{{#__}}selectaflat{{/__}} ({{#__}}required{{/__}})<span class="input-prepend"><br>
+    <span class="add-on"><i class="icon-home"></i></span>
+    <span class="wpcf7-form-control-wrap menu-262">
+    <select name="menu-262" id="Flats" aria-required="true" aria-invalid="false">
+        <option value="Flat 1">{{#__}}flat{{/__}} 1</option>
+        <option value="Flat 2">{{#__}}flat{{/__}} 2</option>
+        <option value="Flat 3">{{#__}}flat{{/__}} 3</option>
+        <option value="Flat 4">{{#__}}flat{{/__}} 4</option>
+        <option value="Whole House">Whole House</option>
+    </select></span></span></p>
 <p>Select a reservation start date (required)<span class="input-prepend"><br>
    <span class="add-on"><i class="icon-calendar"></i></span><span class="wpcf7-form-control-wrap date-159"><input type="text" name="date-159" value="" size="40" class="wpcf7-form-control wpcf7-date wpcf7-validates-as-required hasDatepicker" id="datepicker" aria-required="true"> </span></span></p>
 <p>Select a duaration in days<span class="input-prepend"><br>
